src/main/java/com/example/movieapp/error/exceptions/ActorAlreadyExistsException.java
package com.example.movieapp.error.exceptions;

public class ActorAlreadyExistsException extends RuntimeException {

    public ActorAlreadyExistsException(String message) {

        super(message);
    }
}

